--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -1,5 +1,7 @@
 .reviews-container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: space-between;
     margin: 20px;
+    background: gainsboro;
 }
