--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,11 @@
 .Header{
     display: flex;
     justify-content: flex-end;
-    flex-direction: column;
+    /*align-items: flex-end;*/
+    flex-direction: row;
     background-color: antiquewhite;
     color: black;
     font-size: 25px;
-    height:250px
+    height:60px;
+
 }
