--- a/src/components/Pages/LoginPage.css
+++ b/src/components/Pages/LoginPage.css
@@ -1,3 +1,40 @@
-.button-arrange{
-    margin: 5px;
+.login-form-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 20px;
+    width: 600px;
+
+
+}
+.login-singleForm-container{
+    display: flex;
+    flex-direction: column;
+    /*align-items: flex-end;*/
+    width: 200px;
+}
+.login-form-container button{
+    width: 80px;
+}
+.login-welcome-container button{
+    margin-left: 10px;
+    width: 80px;
+}
+.login-welcome-container {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 20px;
+    margin-top: 5px;
+    width: 600px;
+    height: 50px;
+
+}
+
+
+.form-container form {
+    margin-right: 10px;
 }
