--- a/src/components/Restaurants/Restaurants.css
+++ b/src/components/Restaurants/Restaurants.css
@@ -1,7 +1,9 @@
 .restaurants-container{
     display: flex;
-    flex-direction: row;
-    margin: 20px;
+    flex-direction: column;
+    /*justify-content: flex-end;*/
+    /*align-items: center;*/
+    /*margin: 20px;*/
 }
 .sortButton{
     display: flex;
