--- a/src/components/Booking/Booking.css
+++ b/src/components/Booking/Booking.css
@@ -1,11 +1,11 @@
 .booking-info-container{
     display: flex;
-    flex-direction: row;
-    margin: 10px;
-    padding: 5px;
-    border: 1px solid black;
-    border-radius: 10px;
-    width: 500px;
+    flex-direction: column;
+    margin: 5px;
+    /*padding: 5px;*/
+    /*border: 1px solid black;*/
+    /*border-radius: 10px;*/
+    /*width: 500px;*/
 }
 .booking-button-container{
     display: flex;
