--- a/src/components/NewForm/NewGeneralNewsForm.css
+++ b/src/components/NewForm/NewGeneralNewsForm.css
@@ -1,13 +1,13 @@
-/*.form-container {*/
-/*    display: flex;*/
-/*    flex-direction: row;*/
-/*    align-items: center;*/
-/*    margin: 20px;*/
-/*}*/
-/*.singleForm-container{*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*}*/
+.news-form-container {
+    display: flex;
+    flex-direction: column;
+    /*align-items: center;*/
+    margin: 20px;
+}
+.singleForm-container textarea{
+    width: 600px;
+    height: 200px;
+}
 
 /*.form-container form {*/
 /*    margin-right: 10px;*/
