--- a/src/components/NewsItem/GeneralNewsItem.css
+++ b/src/components/NewsItem/GeneralNewsItem.css
@@ -1,14 +1,21 @@
-.generalNewsItem-info-container{
+
+.news-info-container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     margin: 5px;
     /*padding: 5px;*/
     /*border: 1px solid black;*/
     /*border-radius: 10px;*/
-    width: 350px;
+    /*width: 100%;*/
 }
-.generalNewsItem-button-container{
+
+.news-text{
+    width: 100%;
+    word-wrap: break-word;
+}
+
+.news-button-container{
     display: flex;
     flex-direction: row;
     margin: 10px;
