--- a/src/components/Restaurant/Restaurant.css
+++ b/src/components/Restaurant/Restaurant.css
@@ -7,7 +7,8 @@
     /*padding: 20px;*/
     border: 1px solid black;
     /*border-radius: 10px;*/
-    width: 900px;
+    width: 100%;
+    /*width: 900px;*/
 }
 
 .restaurant-info-container {
