--- a/src/components/Pages/LoginPage.css
+++ b/src/components/Pages/LoginPage.css
@@ -21,18 +21,28 @@
     margin-left: 10px;
     width: 80px;
 }
+.login-main-container {
+     display: flex;
+     flex-direction: column;
+     align-items: flex-end;
+     margin: 20px;
+     margin-top: 5px;
+ }
+.login-info-container {
+    font-size: 12px;
+}
 .login-welcome-container {
 
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    align-items: center;
-    margin: 20px;
-    margin-top: 5px;
+    align-items: flex-start;
+    /*margin: 20px;*/
+    /*margin-top: 5px;*/
     width: 600px;
-    height: 50px;
-
+    height: 30px;
 }
+
 
 
 .form-container form {
