--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -1,22 +1,16 @@
+.main-user-login-container{
+    display: flex;
+    flex-direction: row;
+}
 .user-info-container{
     display: flex;
     flex-direction: column;
-    /*margin: 10px;*/
-    /*padding: 5px;*/
-    /*border: 1px solid black;*/
-    /*border-radius: 10px;*/
-    width: 300px;
+    width: 100px;
 }
 .user-login-container{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    /*margin: 10px;*/
-    /*padding: 5px;*/
-    /*border: 1px solid black;*/
-    /*border-radius: 10px;*/
-    /*width: 300px;*/
-
 }
 .user-button-container{
     display: flex;
